# MinimalCpp

./: CMakeLists.txt  README.md  compile.sh  main.cpp
